[gd_scene load_steps=5 format=3 uid="uid://88dxb6q616t"]

[ext_resource type="Script" uid="uid://doce3bv3b01pc" path="res://mob/spawner/mob_spawner.gd" id="1_68dvk"]
[ext_resource type="PackedScene" uid="uid://uw8barblxj8t" path="res://mob/mob.tscn" id="2_skyhy"]
[ext_resource type="PackedScene" uid="uid://dbt0d7vk84781" path="res://mob/spawner_model.tscn" id="3_skyhy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_skyhy"]
radius = 20.0

[node name="MobSpawner" type="Node3D"]
script = ExtResource("1_68dvk")
spawn_scene = ExtResource("2_skyhy")

[node name="Marker3D" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="spawner_model" parent="." instance=ExtResource("3_skyhy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_skyhy")

[node name="SubViewport" type="SubViewport" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
